# python-intermediate-inflammation

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
inflammation/: compute_data.py  views.py
tests/: test_compute_data.py  test_models.py  test_patient.py
